--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@ li {
 }
 
 .navBar {
-  background: steelblue;
+  background: rgb(223, 64, 64);
   box-shadow: 4px 2px 5px gray;
   color: white;
   margin-bottom: 2rem;
