--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -1,6 +1,7 @@
 .detail-title {
     display: flex;
     justify-content: space-around;
+    padding: 1em;
 }
 
 .student-details {
@@ -13,9 +14,19 @@
 .event-student {
     display: flex;
     justify-content: center;
+    padding: 1em;
 }
 
 .chart {
     display: flex;
+    border: solid;
+    border-width: thin;
+    flex-wrap: wrap;
+    align-content: space-around;
+    flex-direction: column;
 }
 
+.container-1 {
+    display: flex;
+    justify-content: space-evenly;
+}
