finish touches on styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: Impact, fantasy;
+  font-family: 'Your Custom Font', Impact, fantasy;
 }
 
 p {
