--- a/frontend/src/pages/EventListPage/EventListPage.css
+++ b/frontend/src/pages/EventListPage/EventListPage.css
@@ -13,11 +13,14 @@
     font-size: 40px;
     color: yellow;
     -webkit-text-stroke: 0.5px black;
+    font-family: 'Your Custom Font', Impact, fantasy;
  } 
 
 .event {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
