--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     padding: 1em;
+    font-family: 'Your Custom Font', Impact, fantasy;
 }
 
 .chart {
