--- a/frontend/src/pages/RegisterPage/RegisterPage.css
+++ b/frontend/src/pages/RegisterPage/RegisterPage.css
@@ -8,3 +8,8 @@
     justify-content: center;
     align-items: center;
   }
+
+.reg-text {
+  color: white;
+  font-family: 'Your Custom Font', Impact, fantasy;
+}
