updated images paths

--- a/frontend/src/pages/RegisterPage/RegisterPage.css
+++ b/frontend/src/pages/RegisterPage/RegisterPage.css
@@ -1,5 +1,5 @@
 .container-2 {
-    background-image: url("C:/Users/dn_he/Desktop/devCodeCamp/Capstone/Capstone_LetsTrack/timothy-eberly-7MRajrPiTqw-unsplash.jpg");
+    background-image: url("../../images/timothy-eberly-7MRajrPiTqw-unsplash.jpg");
     background-size: cover;
     background-position: center;
     width: 100vw;
