--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -73,7 +73,7 @@
   }
   
 .container-3 {
-    background-image: url("C:/Users/dn_he/Desktop/devCodeCamp/Capstone/Capstone_LetsTrack/nolan-kent-finxP8-YEDc-unsplash.jpg");
+    background-image: url("../../images/nolan-kent-finxP8-YEDc-unsplash.jpg");
     background-size: cover;
     background-position: center;
     width: 100vw;
